--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,9 @@ dependencies:
   dash_chat_2: ^0.0.20
   chat_gpt_sdk: ^3.1.5
   image_picker: ^1.2.1
-
+  flutter_reactive_ble: ^5.0.3
+  permission_handler: ^11.3.1
+  provider: ^6.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
